# difftail

./: Cargo.toml  LICENSE  README.md  RELEASING.md
Formula/: chrono-diff.rb  difftail.rb
docs/: architecture.md  chrono-diff-truth.md  decisions.md  difftail-truth.md  roadmap.md
docs/decisions/: 001-inline-stream-not-a-tui.md  002-shell-out-to-git.md  003-scope-u0-anchoring-plus-tree-sitter.md  004-include-exclude-globset.md  005-attribution-heuristic.md  006-homebrew-build-from-source.md  README.md
src/: agents.rs  filter.rs  git.rs  main.rs  render.rs  scope.rs
