[package]
name = "chrono-diff"
version = "0.1.0"
edition = "2021"
description = "Real-time review feed — prints each repo change inline (time, file, language-aware scope, diff) as agents edit."
license = "MIT"

[dependencies]
notify-debouncer-mini = "0.4"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
lto = true
strip = true
